# slam_tests

./: .gitignore  README.md
orb_slam2_test/: CMakeLists.txt  package.xml
orb_slam2_test/config/: cfg.yaml
orb_slam2_test/launch/: bag.launch  orb_slam.launch
orb_slam2_test/visualization/: KeyFrameTrajectory.txt  show_trajectory.py
rtabmap_test/: CMakeLists.txt  package.xml
rtabmap_test/launch/: rtabmap.launch
rtabmap_test/rviz/: config.rviz
slam_bags/: CMakeLists.txt  package.xml
