<package>
  <name>rtabmap_test</name>
  <version>0.0.1</version>
  <description>Rtabmap test package</description>
  <maintainer email="m.ivanov@innopolis.ru">Mike Ivanou</maintainer>
  <license>MIT</license>
  <author email="m.ivanov@innopolis.ru">Mike Ivanou</author>
  <buildtool_depend>catkin</buildtool_depend>

</package>
